# instant_python_bootstrap

./: .gitignore  bootstrap.py  constraints.txt  install.py  pyproject.toml  readme.md
cmd/: squash_and_push
